# GUI

./: .gitignore  CMakeLists.txt  electron.vite.config.ts  native.cpp  package.json  pnpm-lock.yaml
gpu_viewport/: CMakeLists.txt  package.json  pnpm-lock.yaml
gpu_viewport/dependencies/include/: VBCore.h  VBErrorCodes.h  VBTypes.h  core.h  error_codes.h  types.h
gpu_viewport/dependencies/lib/: VBCore.lib
gpu_viewport/lib/: gpu_viewport-binding.js  gpu_viewport.d.ts  gpu_viewport.js
gpu_viewport/src/: gpu_viewport.cpp  gpu_viewport.hpp  main.cpp
native/: GPUApplication.cpp  GPUApplication.hpp  native.cpp
native/dependencies/include/: VBErrorCodes.h
native/shaders/: shader.frag
shaders/: average.comp.spv  compile.bat  frag.spv  shader.vert
src/: types.d.ts
src/main/: index.ts
src/renderer/: index.html
src/renderer/src/: App.svelte
src/renderer/src/components/: DetectorControl.svelte  Viewport.svelte
